# MastersThesis

./: .gitignore  PROGRESS.md  README.md  TODO.md
CODE/: TODO
CODE/CPP/: CMakeLists.txt  filter.cpp  filter.h  main.cpp  main.h  sah.cpp  sah.h
CODE/PYTHON/: Makefile  main.py  pyproject.toml  results.xml  verification.py
CODE/VERILOG/: filter.sv  sah.sv  zneg1.sv
CODE/VERILOG/DDS/: dds.sv  pa.sv  pulse.sv
